ピッチ更新APIを追加
