# test/e2e/__snapshots__/test_openapi/test_OpenAPIの形が変わっていないことを確認.json
@@ -189,6 +189,22 @@
         "title": "Body_setting_post_setting_post",
         "type": "object"
       },
+      "Body_sing_frame_f0_sing_frame_f0_post": {
+        "properties": {
+          "frame_audio_query": {
+            "$ref": "#/components/schemas/FrameAudioQuery"
+          },
+          "score": {
+            "$ref": "#/components/schemas/Score"
+          }
+        },
+        "required": [
+          "score",
+          "frame_audio_query"
+        ],
+        "title": "Body_sing_frame_f0_sing_frame_f0_post",
+        "type": "object"
+      },
       "Body_sing_frame_volume_sing_frame_volume_post": {
         "properties": {
           "frame_audio_query": {
@@ -2528,6 +2544,71 @@
         "summary": "歌唱音声合成用のクエリを作成する",
         "tags": [
           "クエリ作成"
+        ]
+      }
+    },
+    "/sing_frame_f0": {
+      "post": {
+        "operationId": "sing_frame_f0_sing_frame_f0_post",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "speaker",
+            "required": true,
+            "schema": {
+              "title": "Speaker",
+              "type": "integer"
+            }
+          },
+          {
+            "in": "query",
+            "name": "core_version",
+            "required": false,
+            "schema": {
+              "title": "Core Version",
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_sing_frame_f0_sing_frame_f0_post"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "type": "number"
+                  },
+                  "title": "Response Sing Frame F0 Sing Frame F0 Post",
+                  "type": "array"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "楽譜・歌唱音声合成用のクエリからフレームごとの音高を得る",
+        "tags": [
+          "クエリ編集"
         ]
       }
     },
