# voicevox_engine/app/routers/tts_pipeline.py
@@ -412,6 +412,26 @@ def generate_tts_pipeline_router(
         )
 
     @router.post(
+        "/sing_frame_f0",
+        tags=["クエリ編集"],
+        summary="楽譜・歌唱音声合成用のクエリからフレームごとの音高を得る",
+    )
+    def sing_frame_f0(
+        score: Score,
+        frame_audio_query: FrameAudioQuery,
+        style_id: Annotated[StyleId, Query(alias="speaker")],
+        core_version: str | SkipJsonSchema[None] = None,
+    ) -> list[float]:
+        version = core_version or LATEST_VERSION
+        engine = tts_engines.get_engine(version)
+        try:
+            return engine.create_sing_f0_from_phoneme(
+                score, frame_audio_query.phonemes, style_id
+            )
+        except TalkSingInvalidInputError as e:
+            raise HTTPException(status_code=400, detail=str(e))
+
+    @router.post(
         "/sing_frame_volume",
         tags=["クエリ編集"],
         summary="楽譜・歌唱音声合成用のクエリからフレームごとの音量を得る",
